--- a/playbook.yml
+++ b/playbook.yml
@@ -5,6 +5,12 @@
     become: yes
     become_method: sudo
   - name: clone myrepo
-    git: repo=https://github.com/betsamee/myrepo.git dest=myrepo/
+    git: repo=https://github.com/betsamee/myrepo.git dest=myrepo/ update=no
   - name: clone petclinic
-    git: repo=https://github.com/betsamee/spring-petclinic.git dest=petclinic/
+    git: repo=https://github.com/betsamee/spring-petclinic.git dest=petclinic/ update=no
+  - name: create maven folder
+    file: path=maven/ state=directory mode=0755
+  - name: get maven
+    unarchive: src=http://apache.spd.co.il/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.tar.gz dest=/home/ec2-user/maven/ copy=no
+    become: yes
+    become_method: sudo
